# projet_sirene

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_exploration_bronze.ipynb  02_exploration_silver.ipynb  03_exploration_gold.ipynb
scripts/: check_bronze.py  check_gold.py  check_silver.py  quality_check.py
src/sirene_pipeline/: main.py
src/sirene_pipeline/config/: __init__.py  settings.toml
src/sirene_pipeline/services/: bronze_job.py  gold_job.py  silver_job.py
src/sirene_pipeline/utils/: data_helpers.py  metrics.py  silver_schemas.py
tests/: conftest.py  test_bronze_idempotentcy.py  test_gold_job.py  test_silver_logic.py
